invoice service - added test cases for config and resolved sonar-cube issues